Implemented user registration modal and services for user and role management.

--- a/src/app/modules/users/pages/users-pages/users-pages.component.html
+++ b/src/app/modules/users/pages/users-pages/users-pages.component.html
@@ -1,1 +1,64 @@
-<p>users-pages works!</p>
+<mat-card class="p-2 mt-5 mx-10 mb-10">
+
+  <mat-card-title class="pb-4">
+
+      <button mat-fab extended  (click)="nuevoUsuario()">
+        <mat-icon>person_add</mat-icon>
+        Nuevo Usuario
+      </button>
+
+  </mat-card-title>
+
+  <mat-divider class="p-2"></mat-divider>
+
+  <mat-card-content class="dashboard-card-content">
+      <mat-form-field appearance="fill">
+          <mat-label>Buscar</mat-label>
+          <input matInput (keypress)="aplicarFiltroTabla($event, dt)" #input>
+      </mat-form-field>
+
+      <p-table
+      [value]="datalistaUsuario.data"
+      [paginator]="true"
+      [rows]="10"
+      [rowsPerPageOptions]="[10, 20, 30]"
+      [stripedRows]="true"
+      [globalFilterFields]="['nombreCompleto']"
+      #dt
+  >
+      <ng-template pTemplate="header">
+          <tr>
+              <th>Nombre</th>
+              <th>Correo</th>
+              <th>Rol</th>
+              <th>Estado</th>
+              <th></th>
+          </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-usuario>
+          <tr>
+              <td>{{ usuario.nombreCompleto}}</td>
+              <td>{{ usuario.correo }}</td>
+              <td>{{ usuario.rolDescripcion}}</td>
+              <td>
+                <mat-slide-toggle
+                  *ngIf="usuario.rolDescripcion !== 'Administrador'"
+                  [checked]="usuario.esActivo === 1"
+                  (change)="cambiarEstado(usuario)">
+                </mat-slide-toggle>
+              </td>
+              <td class="flex gap-2">
+                  <button pButton icon="pi pi-pencil" class="p-button-rounded p-button-info p-mr-2" (click)="editarUsuario(usuario)"></button>
+                  <button pButton icon="pi pi-trash" class="p-button-rounded p-button-danger" (click)="eliminarUsuario(usuario)"></button>
+              </td>
+          </tr>
+      </ng-template>
+  </p-table>
+
+
+  </mat-card-content>
+</mat-card>
+
+
+
+
