--- a/src/app/modules/report/pages/report-page/report-page.component.html
+++ b/src/app/modules/report/pages/report-page/report-page.component.html
@@ -1,1 +1,118 @@
-<p>report-page works!</p>
+
+<mat-card class="p-2 mt-5 mx-10 mb-10">
+
+  <mat-card-content>
+
+      <form action="" [formGroup]="formularioFiltro" (ngSubmit)="buscarVentas()">
+
+          <div class="campo-formualrio">
+
+              <!-- campo se mostrara si es por fecha-->
+              <mat-form-field appearance="fill" >
+                  <mat-label>Fecha inicio</mat-label>
+                  <input matInput autocomplete="off" formControlName="fechaInicio" [matDatepicker]="picker1">
+                  <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
+                  <mat-datepicker #picker1></mat-datepicker>
+              </mat-form-field>
+
+                 <!-- campo se mostrara si es por fecha-->
+                 <mat-form-field appearance="fill">
+                  <mat-label>Fecha Fin</mat-label>
+                  <input matInput autocomplete="off" formControlName="fechaFin" [matDatepicker]="picker2">
+                  <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
+                  <mat-datepicker #picker2></mat-datepicker>
+              </mat-form-field>
+
+              <!-- boton -->
+              <button mat-raised-button color="primary"
+                  [disabled]="formularioFiltro.invalid"
+                  type="submit"
+                  class="boton-buscar"
+                  >
+                  <mat-icon>search</mat-icon>Buscar
+              </button>
+
+          </div>
+
+      </form>
+
+      <!-- boton para exportar formulario a Excel-->
+      <div class="pb-4 flex items-center space-x-4">
+
+          <!-- <button mat-raised-button color="primary"
+              [disabled]="listaVentasReporte.length < 1"
+              class="boton-exportar-excel"
+              (click)="exportarExcel()">
+              <mat-icon>feed</mat-icon>Exportar Excel
+          </button>
+
+          <button mat-raised-button color="warn"
+              [disabled]="listaVentasReporte.length < 1"
+              (click)="exportarPDF()">
+              <mat-icon>picture_as_pdf</mat-icon>Exportar PDF
+          </button> -->
+
+          <!-- <p-button
+            [disabled]="listaVentasReporte.length < 1"
+            label="Exportar Excel"
+            icon="pi pi-file-excel"
+            severity="primary"
+            (click)="exportarExcel()"
+          /> -->
+
+          <p-button
+            [disabled]="listaVentasReporte.length < 1"
+            label="Exportar PDF"
+            icon="pi pi-file-pdf"
+            severity="danger"
+            (click)="exportarPDF()"
+          />
+
+      </div>
+
+
+          <!-- talba -->
+        <p-table
+        [value]="dataVentaReporte.data"
+        [paginator]="true"
+        [rows]="20"
+        [rowsPerPageOptions]="[20, 30, 40]"
+        [stripedRows]="true"
+        [globalFilterFields]="['nombre', 'descripcionCategoria', 'precio', 'stock']"
+        #dt
+    >
+        <ng-template pTemplate="header">
+            <tr>
+                <th>Fecha Registro</th>
+                <th>Numero de Venta</th>
+                <th>Tipo de Pago</th>
+                <th>Total Venta</th>
+                <th>Producto</th>
+                <th>Cantidad</th>
+                <th>Precio</th>
+                <th>Total producto</th>
+                <th>Usuario</th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-reporte>
+            <tr>
+                <td>{{ reporte.fechaRegistro }}</td>
+                <td>{{ reporte.numeroVenta }}</td>
+                <td>{{ reporte.tipoPago }}</td>
+                <td>{{ reporte.totalVenta }}</td>
+                <td>{{ reporte.producto }}</td>
+                <td>{{ reporte.cantidad }}</td>
+                <td>{{ reporte.precio }}</td>
+                <td>{{ reporte.total }}</td>
+                <td>{{ reporte.usuario }}</td>
+            </tr>
+        </ng-template>
+
+    </p-table>
+
+  </mat-card-content>
+</mat-card>
+
+
+
+
