Bug fixes and minor UI adjustments across various modules in preparation for v1.0 release.

--- a/src/app/modules/authentication/components/inicio/inicio.component.html
+++ b/src/app/modules/authentication/components/inicio/inicio.component.html
@@ -15,9 +15,9 @@
        Licorera Digital Pro
      </h1>
      <p class="text-white mt-6 text-lg lg:text-xl leading-relaxed">
-       Gestiona tu droguería de manera eficiente con nuestra plataforma. Mantén un control preciso de tu stock, reduce errores y enfócate en lo que realmente importa: atender a tus clientes.
+       Gestiona tu Tienda de manera eficiente con nuestra plataforma. Mantén un control preciso de tu stock, reduce errores y enfócate en lo que realmente importa: atender a tus clientes.
      </p>
-     <button href="#" (click)="loginUsuario()" class="rounded  text-white bg-blue-500 border-0 py-2 px-4 text-md font-semibold tracking-widest uppercase hover:bg-blue-700 hover:scale-125 transition">
+     <button href="#" (click)="loginUsuario()" class="rounded  text-white bg-blue-800 border-0 py-2 px-4 text-md font-semibold tracking-widest uppercase hover:bg-blue-700 hover:scale-125 transition">
        Iniciar Sesión
      </button>
    </div>
