--- a/src/app/modules/sales/pages/sales-pages/sales-pages.component.html
+++ b/src/app/modules/sales/pages/sales-pages/sales-pages.component.html
@@ -73,7 +73,7 @@
             <tr>
                 <th>Producto</th>
                 <th>Cantidad</th>
-                <th>Precio</th>
+                <th>PrecioVenta</th>
                 <th>Total</th>
                 <th></th>
             </tr>
