--- a/src/app/modules/users/components/modal-registro/modal-registro.component.html
+++ b/src/app/modules/users/components/modal-registro/modal-registro.component.html
@@ -14,7 +14,7 @@
             </mat-grid-tile>
 
             <!-- segunda fila correo -->
-            <mat-grid-tile>
+            <!-- <mat-grid-tile>
                 <mat-form-field appearance="fill">
                     <mat-label>Correo</mat-label>
                     <input matInput autocomplete="off" formControlName="correo">
@@ -26,7 +26,7 @@
                     >
                     Este campo debe ser un email válido.
                 </p>
-            </mat-grid-tile>
+            </mat-grid-tile> -->
 
             <!-- tercera fila Rol-->
             <mat-grid-tile>
